--- a/VIS/index.html
+++ b/VIS/index.html
@@ -23,72 +23,117 @@ text {
 </style>
 <body>
 <script>
+var edgeFile = "links.csv";
+// Example Format (without the lines with stars):
+
+//***************
+//source,target,value
+//gene1,gene2,0.91
+//gene2,gene3,0.91
+//gene3,gene5,0.99
+//***************
+
+
+var nodeClusterFile = "nodes.csv";
+// Example Format (without the lines with stars):
+
+//***************
+//name,group
+//gene1,1
+//gene2,2
+//***************
 
 // Import links from a CSV File.
-var links = d3.csv("edges9.csv", function(links){
-// This is the threshold that was set for the edges file.
-// The threshold is used to scale edge opacity.
-// For example, if the threshold is 0.9, the range [0.9,1.0]
-// is expanded to [0,1] and used for opacities.
-var threshold = 0.9;
+var links = d3.csv(edgeFile, function(links){
+  // This is the threshold that was set for the edges file.
+  // The threshold is used to scale edge opacity.
+  // For example, if the threshold is 0.9, the range [0.9,1.0]
+  // is expanded to [0,1] and used for opacities.
+  var threshold = 0.9;
   var nodes = {};
-
-  // Compute the distinct nodes from the links.
-  links.forEach(function(link) {
-    link.source = nodes[link.source] || (nodes[link.source] = {name: link.source});
-    link.target = nodes[link.target] || (nodes[link.target] = {name: link.target});
-  });
-
+  
   // Make a window / canvas for simulation
   var width = 1200,
       height = 900,
       n=50;
 
+  // Linkdistance is the default minimum distance between two connected nodes.
+  var linkDistance = 6,
+      // The charge property acts like electrical charge on the nodes.
+      // With force-directed graphs in particular, charge causes nodes
+      // in the graph to repel each other. This behavior is generally
+      // desirable because it tends to prevent the nodes from overlapping
+      // each other in the visualization.
+      charge = -1000;
+
+
+  // Compute the distinct nodes from the links.
+  links.forEach(function(link) {
+    //console.log(link.source);
+    link.source = nodes[link.source] || (nodes[link.source] = {name: link.source});
+    link.target = nodes[link.target] || (nodes[link.target] = {name: link.target});
+  });
+
+  // Read the cluster information from the input CSV.
+  var groups = d3.csv(nodeClusterFile, function(d) {
+    // For each of the cluster annotations:
+    for (var i = 0; i < d.length; i++) {
+      // Assign the node a group from the nodes file.
+      nodes[d[i].name] = {name: d[i].name, group: d[i].group};
+    }
+    }, function(error, rows) {
+      console.log(rows);
+  });
+
+  // Debugging command.
+  //console.log(nodes);
+  
+
   // Settings for force(s).
   var force = d3.layout.force()
-      // Nodes to import.
-      .nodes(d3.values(nodes))
-      // Edges to import.
-      .links(links)
-      .size([width, height])
-      .linkDistance(6)
-      // Charge is basically how much the nodes repell each other.
-      .charge(-1000)
-      // What should happen every "tick". The function tick is called to recalculate
-      // displacements.
-      .on("tick", tick)
-      // Start teh simulation.
-      .start();
+    // Nodes to import.
+    .nodes(d3.values(nodes))
+    // Edges to import.
+    .links(links)
+    .size([width, height])
+    .linkDistance(linkDistance)
+    // Charge is basically how much the nodes repell each other.
+    .charge(charge)
+    // What should happen every "tick". The function tick is called to recalculate
+    // displacements.
+    .on("tick", tick)
+    // Start teh simulation.
+    .start();
 
-      function redraw() {
-      svg.attr("transform",
-          "translate(" + d3.event.translate + ")"
-          + " scale(" + d3.event.scale + ")");
+    function redraw() {
+    svg.attr("transform",
+            "translate(" + d3.event.translate + ")"
+            + " scale(" + d3.event.scale + ")");
     }   
 
   // Settings for the "canvas" / window.
   var svg = d3.select("body").append("svg")
-      .attr("width", width)
-      .attr("height", height)
-      .attr("height", height)
-      .call(d3.behavior.zoom()
-        .on("zoom", redraw))
-      .append('g');
+    .attr("width", width)
+    .attr("height", height)
+    .attr("height", height)
+    .call(d3.behavior.zoom()
+    .on("zoom", redraw))
+    .append('g');
 
   // Settings for the Edges.
   var link = svg.selectAll(".link")
-      .data(force.links())
-      .enter().append("line")
-      .attr("class", "link")
-      // Set the opacity to be 
-      .style("stroke-opacity", function (d) {
-        return 10*(d.value%threshold);});
+    .data(force.links())
+    .enter().append("line")
+    .attr("class", "link")
+    // Set the opacity to be 
+    .style("stroke-opacity", function (d) {
+          return 10*(d.value%threshold);});
 
   // The beaviour for dragging nodes.
   var node_drag = d3.behavior.drag()
-        .on("dragstart", dragstart)
-        .on("drag", dragmove)
-        .on("dragend", dragend);
+    .on("dragstart", dragstart)
+    .on("drag", dragmove)
+    .on("dragend", dragend);
 
   // What happens when you start dragging a node. Kill the force animation.
     function dragstart(d, i) {
@@ -97,87 +142,124 @@ var threshold = 0.9;
 
   // What happens during dragging. The nodes are just translocated.
     function dragmove(d, i) {
-        d.px += d3.event.dx;
-        d.py += d3.event.dy;
-        d.x += d3.event.dx;
-        d.y += d3.event.dy; 
-        tick();
+      d.px += d3.event.dx;
+      d.py += d3.event.dy;
+      d.x += d3.event.dx;
+      d.y += d3.event.dy; 
+      tick();
     }
 
     // What happens when you stop dragging a node.
     function dragend(d, i) {
-        d.fixed = true; // of course set the node to fixed so the force doesn't include the node in its auto positioning stuff
-        tick();
-        // Can make the force resume but.... I'd rather not.
-        //force.resume();
+      d.fixed = true; // of course set the node to fixed so the force doesn't include the node in its auto positioning stuff
+      tick();
+      // Can make the force resume but.... I'd rather not.
+      //force.resume();
     }
 
   // Settings for nodes.
   var node = svg.selectAll(".node")
-      .data(force.nodes())
-      .enter().append("g")
-      .attr("class", "node")
-      .call(node_drag)
-      .on('dblclick', connectedNodes);
+    .data(force.nodes())
+    .enter().append("g")
+    .attr("class", "node")
+    .call(node_drag)
+    .on('dblclick', groupedNodes)
+    .on('click', connectedNodes);
 
   node.append("circle")
-      .attr("r", 8);
+    .attr("r", 8);
 
   node.append("text")
-      .attr("x", 12)
-      .attr("dy", ".35em")
-      // Add text labels to nodes.
-      .text(function(d) { return d.name; });
+    .attr("x", 12)
+    .attr("dy", ".35em")
+    // Add text labels to nodes.
+    .text(function(d) { return d.name; });
 
   // What happens every 'Tick'.
   function tick() {
     link
-        .attr("x1", function(d) { return d.source.x; })
-        .attr("y1", function(d) { return d.source.y; })
-        .attr("x2", function(d) { return d.target.x; })
-        .attr("y2", function(d) { return d.target.y; });
+      .attr("x1", function(d) { return d.source.x; })
+      .attr("y1", function(d) { return d.source.y; })
+      .attr("x2", function(d) { return d.target.x; })
+      .attr("y2", function(d) { return d.target.y; });
 
     node
-        .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
+      .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
   }
 
+  // Toggle stores whether the highlighting is on.
+  var toggle = 0;
 
-//Toggle stores whether the highlighting is on
-var toggle = 0;
-//Create an array logging what is connected to what
-var linkedByIndex = {};
-for (i = 0; i < nodes.length; i++) {
+  // Create an array logging what is connected to what.
+  var linkedByIndex = {};
+  for (i = 0; i < nodes.length; i++) {
     linkedByIndex[i + "," + i] = 1;
-};
+  };
 
-links.forEach(function (d) {
+  // Build an index of connectivity of nodes.
+  links.forEach(function (d) {
     linkedByIndex[d.source.index + "," + d.target.index] = 1;
-});
-//This function looks up whether a pair are neighbours
-function neighboring(a, b) {
+  });
+
+  // This function looks up whether a pair are neighbours.
+  function neighboring(a, b) {
     return linkedByIndex[a.index + "," + b.index];
-}
-function connectedNodes() {
+  }
+
+  // This function handles the behavior for single clicking nondes and highlighting
+  // the nodes connected to the one clicked.
+  function connectedNodes() {
     if (toggle == 0) {
-        //Reduce the opacity of all but the neighbouring nodes
-        d = d3.select(this).node().__data__;
-        node.style("fill-opacity", function (o) {
-            return neighboring(d, o) | neighboring(o, d) ? 1 : 0.1;
-        });
-        link.style("stroke-opacity", function (o) {
-            return d.index==o.source.index | d.index==o.target.index ? 1 : 0.1;
-        });
-        //Reduce the op
-        toggle = 1;
+      //Reduce the opacity of all but the neighbouring nodes.
+      d = d3.select(this).node().__data__;
+      node.style("fill-opacity", function (o) {
+        return neighboring(d, o) | neighboring(o, d) ? 1 : 0.1;
+      });
+      link.style("stroke-opacity", function (o) {
+        return d.index==o.source.index | d.index==o.target.index ? 1 : 0.1;
+      });
+      // Reduce the opacity.
+      toggle = 1;
     } else {
+      // Put them back to old values.
+      node.style("fill-opacity", 1);
+      link.style("stroke-opacity", function (d) {
+      return 10*(d.value%threshold);});
+      toggle = 0;
+    }
+  }
+
+  // This function looks up whether two nodes are in the same group (aka cluster).
+  function sameGroup(a,b){
+    if(a && b){
+      return (nodes[a.name].group == nodes[b.name].group);
+    }else{
+      return 0;
+    }
+    
+  }
+
+  // This function handles the behavior for double clicking nondes and highlighting
+  // the nodes in the same group/cluster to the one clicked.
+  function groupedNodes(){
+    if(toggle==0){
+      toggle = 1;
+      d = d3.select(this).node().__data__;
+      node.style("fill-opacity", function (o) {
+        // Compute opacity based on if the nodes are of the same group.
+        return sameGroup(d, o) ? 1 : 0.1;
+      });
+      link.style("stroke-opacity", function (o) {
+        return sameGroup(d.target,d.source) ? 1 : 0.1;
+      });       
+      } else {
         //Put them back to old values.
         node.style("fill-opacity", 1);
         link.style("stroke-opacity", function (d) {
         return 10*(d.value%threshold);});
         toggle = 0;
-    }
-}
-
+      }
+  }
 });
 
 </script>
